--- a/src/index.html
+++ b/src/index.html
@@ -171,46 +171,32 @@
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br><br>
                    <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
             <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
-            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
-<a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Main MAP</a>
-<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
-<br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Meta Addresses</a>
+<a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Main Map">Main MAP</a>
+<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Map">MAP.txt </a>
+<br><br>
+   <br><br><a href="https://my.mlsapro.com/blend.html" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://my.mlsapro.com/colour.html" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+   <br><br><a href="https://my.mlsapro.com/colour/effect.html" target="_blank" class="meta-address-btn" aria-label="Effects">Effects </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://my.mlsapro.com/colour/sketch.html" target="_blank" class="meta-address-btn" aria-label="Sketch">Sketch </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://purple-tree-026ae2e10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Recylcing">recycling.html </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+ 
+ <br><br><a href="https://brave-plant-0df5a7c1e.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Porfolio">Porfolio </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://purple-forest-04012f110.4.azurestaticapps.net" target="_blank" class="meta-address-btn" aria-label="PGC Crack">PGC Crack </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+  <br><br><a href="https://gentle-pebble-01e938610.4.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="ORG">ORG </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
+   <br><br><a href="https://gray-beach-0792e3b10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Resume Style">Resume Style </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
- <br><br>
-  
+
   </div>
     </form>
 
