--- a/src/index.html
+++ b/src/index.html
@@ -175,11 +175,11 @@
 <a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Main Map">Main MAP</a>
 <a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Map">MAP.txt </a>
 <br><br>
-   <br><br><a href="https://my.mlsapro.com/blend.html" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
+   <br><br><a href="https://my.mlsapro.com/blend" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
  <br><br>
   <br><br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/colour.html" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
+  <br><br><a href="https://my.mlsapro.com/colour" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
  <br><br>
    <br><br><a href="https://my.mlsapro.com/colour/effect.html" target="_blank" class="meta-address-btn" aria-label="Effects">Effects </a>
  <br><br>
