--- a/src/index.html
+++ b/src/index.html
@@ -169,16 +169,15 @@
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br><br><br><br>
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br><br>
-                   <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
-            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
-            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Meta Addresses</a>
-<a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Main Map">Main MAP</a>
-<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Map">MAP.txt </a>
-<br><br>
+ <br><br><a href="https://my.mlsapro.com/Youngest Microsoft Pro at 15!.mp4" target="_blank" class="meta-address-btn" aria-label="Intro">Intro </a>
+ <br><br>
+ <br><br><a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705" target="_blank" class="meta-address-btn" aria-label="MVP Porfolio">MVP Porfolio </a>
+ <br><br>
+<br><br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
+ <br><br>
    <br><br><a href="https://my.mlsapro.com/blend" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
  <br><br>
-  <br><br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
- <br><br>
+  
   <br><br><a href="https://my.mlsapro.com/colour" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
  <br><br>
    <br><br><a href="https://my.mlsapro.com/colour/effect.html" target="_blank" class="meta-address-btn" aria-label="Effects">Effects </a>
@@ -197,6 +196,12 @@
    <br><br><a href="https://gray-beach-0792e3b10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Resume Style">Resume Style </a>
  <br><br>
 
+                   <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
+            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
+            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Meta Addresses</a>
+<a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Main Map">Main MAP</a>
+<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Map">MAP.txt </a>
+<br><br>
   </div>
     </form>
 
