--- a/src/index.html
+++ b/src/index.html
@@ -165,39 +165,38 @@
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s">
             <br><br>
             <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With shahzalshare.txt along with sr.xml</a>
-            <br><br>
+            <br>
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
-            <br><br><br><br>
-            <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br><br>
- <br><br><a href="https://my.mlsapro.com/Youngest Microsoft Pro at 15!.mp4" target="_blank" class="meta-address-btn" aria-label="Intro">Intro </a>
- <br><br>
- <br><br><a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705" target="_blank" class="meta-address-btn" aria-label="MVP Porfolio">MVP Porfolio </a>
- <br><br>
-<br><br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
- <br><br>
-   <br><br><a href="https://my.mlsapro.com/blend" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
- <br><br>
-  
-  <br><br><a href="https://my.mlsapro.com/colour" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
- <br><br>
-   <br><br><a href="https://my.mlsapro.com/colour/effect.html" target="_blank" class="meta-address-btn" aria-label="Effects">Effects </a>
- <br><br>
-  <br><br><a href="https://my.mlsapro.com/colour/sketch.html" target="_blank" class="meta-address-btn" aria-label="Sketch">Sketch </a>
- <br><br>
-  <br><br><a href="https://purple-tree-026ae2e10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Recylcing">recycling.html </a>
- <br><br>
+            <br>
+            <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br>
+ <<br><a href="https://my.mlsapro.com/Youngest Microsoft Pro at 15!.mp4" target="_blank" class="meta-address-btn" aria-label="Intro">Intro </a>
+ <br>
+ <br><a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705" target="_blank" class="meta-address-btn" aria-label="MVP Porfolio">MVP Porfolio </a>
+ <br>
+<br><a href="https://my.mlsapro.com/blogs" target="_blank" class="meta-address-btn" aria-label="Blogs">Chief Bolg </a>
+ <br>
+   <br><a href="https://my.mlsapro.com/blend" target="_blank" class="meta-address-btn" aria-label="Blend">Blend </a>
+ <br>
+  <br><a href="https://my.mlsapro.com/colour" target="_blank" class="meta-address-btn" aria-label="Colours">Colour Effect </a>
+ <br>
+   <br><a href="https://my.mlsapro.com/colour/effect.html" target="_blank" class="meta-address-btn" aria-label="Effects">Effects </a>
+ <br>
+  <br><a href="https://my.mlsapro.com/colour/sketch.html" target="_blank" class="meta-address-btn" aria-label="Sketch">Sketch </a>
+ <br>
+  <br><a href="https://purple-tree-026ae2e10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Recylcing">recycling.html </a>
+ <br>
  
- <br><br><a href="https://brave-plant-0df5a7c1e.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Porfolio">Porfolio </a>
- <br><br>
-  <br><br><a href="https://purple-forest-04012f110.4.azurestaticapps.net" target="_blank" class="meta-address-btn" aria-label="PGC Crack">PGC Crack </a>
- <br><br>
-  <br><br><a href="https://gentle-pebble-01e938610.4.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="ORG">ORG </a>
- <br><br>
-   <br><br><a href="https://gray-beach-0792e3b10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Resume Style">Resume Style </a>
- <br><br>
+ <br><a href="https://brave-plant-0df5a7c1e.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Porfolio">Porfolio </a>
+ <br>
+  <br><a href="https://purple-forest-04012f110.4.azurestaticapps.net" target="_blank" class="meta-address-btn" aria-label="PGC Crack">PGC Crack </a>
+ <br>
+  <br><a href="https://gentle-pebble-01e938610.4.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="ORG">ORG </a>
+ <<br>
+   <br><a href="https://gray-beach-0792e3b10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Resume Style">Resume Style </a>
+ <br>
 
-                   <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
-            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
+                   <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br>
+            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br>
             <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Meta Addresses</a>
 <a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Main Map">Main MAP</a>
 <a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Map">MAP.txt </a>
@@ -263,10 +262,7 @@
                 "https://chat.whatsapp.com/Djp2Wfn7gjT5x5MuYSuclt",
                 "https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t",
                 "https://chat.whatsapp.com/KcKHRbjuSAo7NbBuZEf6GI",
-                "https://my.mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
-                "https://my.mlsapro.com/deck.pptx",
-                "https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc",
-                "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705"
+                "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705",
             ];
 
             urls.forEach(function(url) {
