--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
 
         function signOut() {
             var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d";
-            var postLogoutRedirectUri = encodeURIComponent("https://team.mlsapro.com");
+            var postLogoutRedirectUri = encodeURIComponent("https://my.mlsapro.com");
             var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
             var url = authority + "?post_logout_redirect_uri=" + postLogoutRedirectUri;
             window.location.href = url;
