--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             text-align: center;
             letter-spacing: 2px;
             text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff00ff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff;
-            animation: neonGlow 20s ease-in-out infinite;
+            animation: neonGlow 10s ease-in-out infinite;
             white-space: nowrap;
         }
 
@@ -169,7 +169,7 @@
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br>
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br>
- <<br><a href="https://my.mlsapro.com/Youngest Microsoft Pro at 15!.mp4" target="_blank" class="meta-address-btn" aria-label="Intro">Intro </a>
+ <br><a href="https://my.mlsapro.com/Youngest Microsoft Pro at 15!.mp4" target="_blank" class="meta-address-btn" aria-label="Intro">Intro </a>
  <br>
  <br><a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705" target="_blank" class="meta-address-btn" aria-label="MVP Porfolio">MVP Porfolio </a>
  <br>
@@ -191,7 +191,7 @@
   <br><a href="https://purple-forest-04012f110.4.azurestaticapps.net" target="_blank" class="meta-address-btn" aria-label="PGC Crack">PGC Crack </a>
  <br>
   <br><a href="https://gentle-pebble-01e938610.4.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="ORG">ORG </a>
- <<br>
+ <br>
    <br><a href="https://gray-beach-0792e3b10.5.azurestaticapps.net/" target="_blank" class="meta-address-btn" aria-label="Resume Style">Resume Style </a>
  <br>
 
