--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,8 @@
     <!-- Powered by Shahzal Rehman Section -->
     <div class="powered-by-container">
         <div class="powered-by-text">Powered by</div>
-        <div class="shahzal-rehman-text">Shahzal Rehman</div>
+        <div class="shahzal-rehman-text">Shahzal Rehman <br> <a href="mailto:DoNotReply@97a9f3e2-98d0-4503-818a-a4307d250ef1.azurecomm.net" target="_blank" class="meta-address-btn" aria-label="Map">You can hear us</a>
+ </div>
   </div>
 
     <script>
