--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,7 @@ ol,ul{box-sizing:border-box}:root :where(ul.has-background,ol.has-background){pa
 
 
 <div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
-<div class="wp-block-button has-custom-font-size" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4"><a class="wp-block-button__link has-base-2-color has-text-color has-background has-link-color has-border-color wp-element-button" href="https://mlsapro.com/" style="border-color:#7f56d9;border-width:1px;border-radius:10px;background-color:#7f56d9;padding-top:16px;padding-right:22px;padding-bottom:16px;padding-left:22px">Our Web</a></div>
+<div class="wp-block-button has-custom-font-size" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4"><a class="wp-block-button__link has-base-2-color has-text-color has-background has-link-color has-border-color wp-element-button" href="https://mlsapro.com/my" style="border-color:#7f56d9;border-width:1px;border-radius:10px;background-color:#7f56d9;padding-top:16px;padding-right:22px;padding-bottom:16px;padding-left:22px">Our Web</a></div>
 
 
 
@@ -704,7 +704,7 @@ ol,ul{box-sizing:border-box}:root :where(ul.has-background,ol.has-background){pa
 
 
 
-<p class="has-text-color has-link-color has-body-font-family wp-elements-62313444cda7d2c824871e884c7a63ee" style="color:#667085;font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:400">Â© Pixetiq 2024. All rights reserved.</p>
+<p class="has-text-color has-link-color has-body-font-family wp-elements-62313444cda7d2c824871e884c7a63ee" style="color:#667085;font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:400">© Shahzal Rehman 2024. All rights reserved.</p>
 </div>
 </div>
 
