--- a/src/index.html
+++ b/src/index.html
@@ -361,11 +361,11 @@ ol,ul{box-sizing:border-box}:root :where(ul.has-background,ol.has-background){pa
 				</div></nav>
 
 
-<div class="wp-block-group is-content-justification-right is-layout-flex wp-container-core-group-is-layout-1 wp-block-group-is-layout-flex"><div style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4;text-decoration:none; padding-right:18px;padding-left:18px;padding-top:10px;padding-bottom:10px;" class="logged-out wp-block-loginout has-body-font-family"><a href="https://mlsapro.com/wp-login.php?redirect_to=https%3A%2F%2Fmlsapro.azurewebsites.net%2F">Log in</a></div>
+<div class="wp-block-group is-content-justification-right is-layout-flex wp-container-core-group-is-layout-1 wp-block-group-is-layout-flex"><div style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4;text-decoration:none; padding-right:18px;padding-left:18px;padding-top:10px;padding-bottom:10px;" class="logged-out wp-block-loginout has-body-font-family"><a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://my.mlsapro.com/home&scope=user.read">Log in to Home to Access Excel </a></div>
 
 
 <div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
-<div class="wp-block-button has-custom-font-size has-body-font-family" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600"><a class="wp-block-button__link has-background has-border-color wp-element-button" style="border-color:#7f56d9;border-width:1px;border-radius:10px;background-color:#7f56d9" href="https://mlsapro.com/#">Start for Free</a></div>
+<div class="wp-block-button has-custom-font-size has-body-font-family" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600"><a class="wp-block-button__link has-background has-border-color wp-element-button" style="border-color:#7f56d9;border-width:1px;border-radius:10px;background-color:#7f56d9" href="https://team.mlsapro.com/">About Us</a></div>
 </div>
 </div>
 </div>
@@ -548,7 +548,10 @@ ol,ul{box-sizing:border-box}:root :where(ul.has-background,ol.has-background){pa
 
 
 <div class="wp-block-buttons is-content-justification-center is-layout-flex wp-container-core-buttons-is-layout-7 wp-block-buttons-is-layout-flex">
-<div class="wp-block-button has-custom-font-size" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4"><a class="wp-block-button__link has-base-2-background-color has-text-color has-background has-link-color has-border-color wp-element-button" href="https://mvp.microsoft.com/en-US/studentambassadors/" style="border-color:#7f56d9;border-width:1px;border-radius:10px;color:#344054;padding-top:13px;padding-right:22px;padding-bottom:13px;padding-left:22px" target="_blank" rel="noreferrer noopener">Learn more</a></div>
+<div class="wp-block-button has-custom-font-size" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4"><a class="wp-block-button__link has-base-2-background-color has-text-color has-background has-link-color has-border-color wp-element-button" href="https://org.mlsapro.com" style="border-color:#7f56d9;border-width:1px;border-radius:10px;color:#344054;padding-top:13px;padding-right:22px;padding-bottom:13px;padding-left:22px" target="_blank" rel="noreferrer noopener">Learn more</a></div>
+
+<div class="wp-block-button has-custom-font-size" style="font-size:clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.208), 16px);font-style:normal;font-weight:600;line-height:1.4"><a class="wp-block-button__link has-base-2-background-color has-text-color has-background has-link-color has-border-color wp-element-button" href="https://resume.mlsapro.com" style="border-color:#7f56d9;border-width:1px;border-radius:10px;color:#344054;padding-top:13px;padding-right:22px;padding-bottom:13px;padding-left:22px" target="_blank" rel="noreferrer noopener">Resume Style</a></div>
+
 
 
 
