--- a/src/my/index.html
+++ b/src/my/index.html
@@ -165,7 +165,7 @@
     <form id="mlsapro">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s">
             <br>
- <br><a href="https://my.mlsapro.com/my" target="_blank" class="meta-address-btn" aria-label="Intro">WE With Wordpress</a>
+ <br><a href="https://my.mlsapro.com" target="_blank" class="meta-address-btn" aria-label="Intro">WE With Wordpress</a>
 <br> 
             <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With shahzalshare.txt along with sr.xml</a>
             <br>
@@ -212,7 +212,7 @@
     <!-- Powered by Shahzal Rehman Section -->
     <div class="powered-by-container">
         <div class="powered-by-text">Powered by</div>
-        <div class="shahzal-rehman-text">Shahzal Rehman <br> <a href="mailto:DoNotReply@97a9f3e2-98d0-4503-818a-a4307d250ef1.azurecomm.net" target="_blank" class="meta-address-btn" aria-label="Map">You can hear us</a>
+        <div class="shahzal-rehman-text">Shahzal Rehman <br> <a href="mailto:DoNotReply@mlsapro.com" target="_blank" class="meta-address-btn" aria-label="Map">You can hear us</a>
  </div>
   </div>
 
