--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,21 @@
 <html lang="en-US"><link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style lang="en" type="text/css" id="dark-mode-custom-style"></style><style lang="en" type="text/css" id="dark-mode-native-style"></style><style lang="en" type="text/css" id="dark-mode-native-sheet"></style><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="google-adsense-account" content="ca-pub-7334601574145044">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta charset="UTF-8">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or at shahzal.rehman@studentambassadors.com or contact him at https://facebook.com/mlsapro.global.officials or https://facebook.com/shahzal.rehman.com.global.officials for inquiries.https://my.mlsapro.com/srmapofmain.txt">
+    <meta name="author" content="Shahzal Rehman">
+     <meta name="author" content="Shahzal Rehman Official"><meta name="google-adsense-account" content="ca-pub-7334601574145044">
+<meta name="author" content="shahzal">
+<meta name="author" content="shahzal rehman">
+    <meta name="author" content="shahzal Rehman Official">
+    <meta name="keywords" content="Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https://facebook.com/shahzal.rehman.official or https://facebook.com/shahzal.rehmani.official for inquiries.,Shahzal mlsapro,mlsapro.com,mlsapro is now at https://my.mlsapro.com,shahzal mlsa,shahzal rehman microsoft learn student ambassador,shahzal rehman official blogs,Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast,Shahzal,shahzal,shahzal rehman,shahzal rehman official,Shahzal pictures,shahzal pictures,shahzal rehman pictures,shahzal rehman official pictures">
+    <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
 <meta name="robots" content="max-image-preview:large">
 <title> MLSAPRO* </title>
 <link rel="dns-prefetch" href="https://mlsapro.com/">
