--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <meta name="author" content="shahzal Rehman Official">
     <meta name="keywords" content="Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https://facebook.com/shahzal.rehman.facebook or https://facebook.com/shahzal.rehman.facebook.seven for inquiries.,Shahzal mlsapro,mlsapro.com,mlsapro is now at https://my.mlsapro.com,shahzal mlsa,shahzal rehman microsoft learn student ambassador,shahzal rehman official blogs,Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast,Shahzal,shahzal,shahzal rehman,shahzal rehman official,Shahzal pictures,shahzal pictures,shahzal rehman pictures,shahzal rehman official pictures">
     <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7334601574145044"
+     crossorigin="anonymous"></script>
 <meta name="robots" content="max-image-preview:large">
 <title> MLSAPRO* </title>
 <link rel="dns-prefetch" href="https://mlsapro.com/">
