--- a/src/my/index.html
+++ b/src/my/index.html
@@ -20,8 +20,18 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-        
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+        /* Main Gradient Color */
+        /* background: rgb(192,192,192);
+           background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+        */
+
+        /* Button Hover Color Change (Inverse) */
+        /* background: rgb(192,192,192);
+           background: linear-gradient(-90deg, rgba(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+        */
+
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #1a1a1a;
@@ -37,7 +47,7 @@
         }
 
         .neon-text {
-            font-size: 10vw; /* Default large size */
+            font-size: 10vw;
             color: #fff;
             text-align: center;
             letter-spacing: 2px;
