--- a/src/team/index.html
+++ b/src/team/index.html
@@ -29,13 +29,13 @@
             )(window, document, 'script', 'dataLayer', 'GTM-WSDJ4CL');
         </script>
         <link rel="shortcut icon" type=image/png href=/favicon.png>
-        <title>My MLSAPRO</title>
-        <link href=/app.9de72b3fc7da7c6d4b9a.js rel=preload as=script>
-        <link href=/css/app.2851b3a7.css rel=preload as=style>
-        <link href=/css/chunk-vendors.b10c8445.css rel=preload as=style>
-        <link href=/js/chunk-vendors.e2beb9af.js rel=preload as=script>
-        <link href=/css/chunk-vendors.b10c8445.css rel=stylesheet>
-        <link href=/css/app.2851b3a7.css rel=stylesheet>
+        <title>My PGC</title>
+        <link href=/app.f232164ff18f9ba59081.js rel=preload as=script>
+        <link href=/css/app.5e468233.css rel=preload as=style>
+        <link href=/css/chunk-vendors.b00b3440.css rel=preload as=style>
+        <link href=/js/chunk-vendors.d0ad80a2.js rel=preload as=script>
+        <link href=/css/chunk-vendors.b00b3440.css rel=stylesheet>
+        <link href=/css/app.5e468233.css rel=stylesheet>
         <link rel=icon type=image/png sizes=32x32 href=/img/icons/favicon-32x32.png>
         <link rel=icon type=image/png sizes=16x16 href=/img/icons/favicon-16x16.png>
         <link rel=manifest href=/manifest.json>
@@ -48,6 +48,12 @@
         <meta name=msapplication-TileImage content=/img/icons/msapplication-icon-144x144.png>
         <meta name=msapplication-TileColor content=#000000>
     </head>
+    <style>
+        button:focus, textarea:focus, input:focus {
+            outline: none !important;
+            box-shadow: none !important;
+        }
+    </style>
     <body>
         <noscript>
             <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSDJ4CL" height=0 width=0 style=display:none;visibility:hidden></iframe>
@@ -56,7 +62,7 @@
             <strong>We're sorry but e-learning doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id=app></div>
-        <script src=/js/chunk-vendors.e2beb9af.js></script>
-        <script src=/app.9de72b3fc7da7c6d4b9a.js></script>
+        <script src=/js/chunk-vendors.d0ad80a2.js></script>
+        <script src=/app.f232164ff18f9ba59081.js></script>
     </body>
 </html>
