--- a/src/colour/sketch.html
+++ b/src/colour/sketch.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
+    <meta name="description" content="Shahzal Rehman, a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
     <meta name="author" content="Shahzal Rehman">
-     <meta name="author" content="Shahzal Rehman Official"><meta name="google-adsense-account" content="ca-pub-7334601574145044">
-<meta name="author" content="shahzal">
-<meta name="author" content="shahzal rehman">
+    <meta name="author" content="Shahzal Rehman Official">
+    <meta name="google-adsense-account" content="ca-pub-7334601574145044">
+    <meta name="author" content="shahzal">
+    <meta name="author" content="shahzal rehman">
     <meta name="author" content="shahzal Rehman Official">
     <meta name="keywords" content="Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.,Shahzal mlsapro,shahzal mlsa,shahzal rehman microsoft learn student ambassador,shahzal rehman official blogs,Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast,Shahzal,shahzal,shahzal rehman,shahzal rehman official,Shahzal pictures,shahzal pictures,shahzal rehman pictures,shahzal rehman official pictures">
     <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
@@ -36,19 +35,37 @@
             max-width: 100%;
             display: none; /* Initially hidden */
         }
+        #threshold-label {
+            margin-top: 20px;
+            font-size: 16px;
+        }
+        #threshold-slider {
+            width: 100%;
+            max-width: 300px;
+        }
     </style>
 </head>
 <body>
     <h1>Upload and Convert Image to Sketch</h1>
     <input type="file" id="upload-file" accept="image/*" required>
+    
+    <label id="threshold-label">Threshold: 30%</label>
+    <input type="range" id="threshold-slider" min="1" max="100" value="30" oninput="updateThresholdLabel(this.value)">
+    
     <button onclick="convertToSketch()">Convert to Sketch</button>
     <canvas id="processed-image"></canvas>
     <a id="download-link" style="display: none;" download="sketch_image.png">Download Sketch</a>
 
     <script>
+        function updateThresholdLabel(value) {
+            document.getElementById('threshold-label').textContent = `Threshold: ${value}%`;
+        }
+
         function convertToSketch() {
             const fileInput = document.getElementById('upload-file');
             const file = fileInput.files[0];
+            const thresholdSlider = document.getElementById('threshold-slider');
+            const threshold = (thresholdSlider.value / 100) * 255; // Convert percentage to 0-255 range
 
             if (!file) {
                 alert('Please select an image file.');
@@ -72,8 +89,7 @@
                     const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
                     const data = imageData.data;
 
-                    // Apply edge detection (simple edge detection effect)
-                    const threshold = 30; // Adjust threshold for edge detection
+                    // Apply edge detection with user-defined threshold
                     for (let i = 0; i < data.length; i += 4) {
                         const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
                         const val = avg > threshold ? 255 : 0;
