--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
      crossorigin="anonymous"></script>
 <meta name="robots" content="max-image-preview:large">
 <title> MLSAPRO* </title>
+<link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png" />
 <link rel="dns-prefetch" href="https://mlsapro.com/">
 <link rel="alternate" type="application/rss+xml" title="MLSAPRO Â» Feed" href="https://mlsapro.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="MLSAPRO Â» Comments Feed" href="https://mlsapro.com/comments/feed/">
